[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starlette-flask"
dynamic = ["version"]
description = 'Starlette Flask'
readme = "README.md"
# TODO: Update Python version
requires-python = ">=3.7"
license = "MIT"
# TODO: Update keywords
keywords = []
authors = [
  { name = "hasansezertasan", email = "hasansezertasan@gmail.com" },
]
maintainers = [
  { name = "hasansezertasan", email = "hasansezertasan@gmail.com" },
]
# TODO: Update classifiers
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  'Environment :: Console',
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "flask",
  "starlette",
]

[project.urls]
Documentation = "https://github.com/hasansezertasan/starlette-flask#readme"
Issues = "https://github.com/hasansezertasan/starlette-flask/issues"
Source = "https://github.com/hasansezertasan/starlette-flask"

[tool.hatch.version]
path = "src/starlette_flask/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/auto_backup tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.docs]
detached = true
dependencies = [
  "pdoc3>=0.10.0",
  "mkdocs[i18n]>=1.5.2",
  "mkdocs-material>=8.2.15",
  "mkdocstrings>=0.23.0",
]

[tool.hatch.envs.docs.scripts]
build = [
  "pdoc --html --output-dir site --force src/auto_backup",
  "mkdocs build",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["starlette_flask"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["starlette_flask", "tests"]
branch = true
parallel = true
omit = [
  "src/starlette_flask/__about__.py",
]

[tool.coverage.paths]
starlette_flask = ["src/starlette_flask", "*/starlette-flask/src/starlette_flask"]
tests = ["tests", "*/starlette-flask/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
