[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starlette-flask"
dynamic = ["version"]
description = 'Session Middleware for Starlette/FastAPI Applications based on Flask Session Decoding and Encoding.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
# TODO: Update keywords
keywords = ["fastapi", "starlette", "flask", "session", "cookie", "asgi"]
authors = [{ name = "hasansezertasan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "hasansezertasan", email = "hasansezertasan@gmail.com" },
]
# TODO: Update classifiers
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Session",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: Flask",
  "Framework :: FastAPI",
  'Environment :: Web Environment',
]
dependencies = ["starlette"]

[project.urls]
Documentation = "https://github.com/hasansezertasan/starlette-flask#readme"
Issues = "https://github.com/hasansezertasan/starlette-flask/issues"
Source = "https://github.com/hasansezertasan/starlette-flask"
Changelog = "https://github.com/hasansezertasan/starlette-flask/CHANGELOG.md"

[tool.hatch.version]
path = "src/starlette_flask/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest", "fastapi[all]", "flask", "a2wsgi"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/starlette_flask tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.hatch.envs.docs]
detached = true
dependencies = [
  "pdoc3>=0.10.0",
  "mkdocs[i18n]>=1.5.2",
  "mkdocs-material>=8.2.15",
  "mkdocstrings>=0.23.0",
]

[tool.hatch.envs.docs.scripts]
build = [
  "pdoc --html --output-dir site --force src/starlette_flask",
  "mkdocs build",
]

[tool.black]
target-version = ["py38"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["starlette_flask"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["starlette_flask", "tests"]
branch = true
parallel = true
omit = ["src/starlette_flask/__about__.py"]

[tool.coverage.paths]
starlette_flask = [
  "src/starlette_flask",
  "*/starlette-flask/src/starlette_flask",
]
tests = ["tests", "*/starlette-flask/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
