[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "starlette-flask"
dynamic = ["version"]
description = "Session Middleware for Starlette/FastAPI Applications based on Flask Session Decoding and Encoding."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "fastapi",
  "starlette",
  "flask",
  "session",
  "cookie",
  "asgi",
  "middleware",
  # TODO @hasansezertasan: Update here.
]
authors = [{ name = "hasansezertasan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "hasansezertasan", email = "hasansezertasan@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Internet",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Session",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Flask",
  "Framework :: FastAPI",
  "Environment :: Web Environment",
  # TODO @hasansezertasan: Update here.
]
dependencies = ["starlette"]

[project.urls]
Documentation = "https://github.com/hasansezertasan/starlette-flask#readme"
Issues = "https://github.com/hasansezertasan/starlette-flask/issues"
Source = "https://github.com/hasansezertasan/starlette-flask"
Changelog = "https://github.com/hasansezertasan/starlette-flask/CHANGELOG.md"


[tool.hatch.version]
path = "src/starlette_flask/__about__.py"


[tool.hatch.envs.default]
# installer = "uv"
dependencies = [
  "fastapi",
  "flask",
  "a2wsgi",
  "coverage[toml]>=6.5",
  "pytest",
]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]


[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/starlette_flask tests}"


[tool.hatch.envs.docs]
detached = true
dependencies = ["pdoc3>=0.10.0"]


[tool.hatch.envs.docs.scripts]
build = ["pdoc --html --output-dir site --force src/starlette_flask"]


[tool.coverage.run]
source_pkgs = ["starlette_flask", "tests"]
branch = true
parallel = true
omit = [
  "src/starlette_flask/__about__.py",
]


[tool.coverage.paths]
starlette_flask = ["src/starlette_flask", "*/starlette-flask/src/starlette_flask"]
tests = ["tests", "*/starlette-flask/tests"]


[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
